[package]
name = "order_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binance_spot_connector_rust = { version = "1.1.0", features = ["full"] }
env_logger = "0.10.2"
futures-util = "0.3.30"
lazy_static = "1.4.0"
log = "0.4.20"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.17.2"
url = "2.2.2"
